add manifesto submodule
Manifesto is required to build the manifest. Add it as a submodule.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nuttx"]
 	path = nuttx
 	url = https://github.com/projectara/nuttx.git
+[submodule "manifesto"]
+	path = manifesto
+	url = https://github.com/projectara/manifesto.git
