--- a/configs/skeleton_defconfig
+++ b/configs/skeleton_defconfig
@@ -131,6 +131,7 @@ CONFIG_ARMV7M_CMNVECTOR=y
 # CONFIG_ARCH_HAVE_FPU is not set
 # CONFIG_DEBUG_HARDFAULT is not set
 # CONFIG_ARM_SEMIHOSTING is not set
+CONFIG_ARCH_HAVE_HIRES_TIMER=y
 
 #
 # ARMV7M Configuration Options
@@ -147,9 +148,9 @@ CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 CONFIG_ARCH_CHIP_GPBRIDGE=y
 CONFIG_TSB_CHIP_REV_ES2=y
 CONFIG_TSB_CHIP_REV="es2"
+# CONFIG_ARCH_CHIP_DEVICE_GDMAC is not set
 CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 # CONFIG_ARCH_CHIP_DEVICE_PWM is not set
-# CONFIG_ARCH_CHIP_DEVICE_SPI_BITBANG is not set
 # CONFIG_ARCH_CHIP_DEVICE_UART is not set
 CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_TSB_PINSHARE_ETM is not set
@@ -159,6 +160,7 @@ CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_ARCH_CHIP_TSB_PLL is not set
 # CONFIG_ARCH_CHIP_DEVICE_I2S is not set
 # CONFIG_ARCH_CHIP_DEVICE_SPI is not set
+# CONFIG_ARCH_CHIP_DEVICE_HID is not set
 
 #
 # Architecture Options
@@ -232,7 +234,7 @@ CONFIG_NSH_MMCSDMINOR=0
 #
 # CONFIG_ARA_BRIDGE_HAVE_CAMERA is not set
 # CONFIG_BOARD_HAVE_DISPLAY is not set
-# CONFIG_ARA_BRIDGE_BOARD_BDB is not set
+# CONFIG_ARA_BRIDGE_BOARD_ARA_DEVBOARD is not set
 CONFIG_ARA_BRIDGE_BOARD_OOT=y
 
 #
@@ -465,6 +467,8 @@ CONFIG_GREYBUS_USB_HOST_PHY=y
 CONFIG_GREYBUS_PWM_PHY=y
 CONFIG_GREYBUS_I2S_PHY=y
 CONFIG_GREYBUS_UART_PHY=y
+# CONFIG_GREYBUS_HID is not set
+# CONFIG_GREYBUS_FEATURE_HAVE_TIMESTAMPS is not set
 
 #
 # Networking Support
@@ -596,6 +600,8 @@ CONFIG_GPBRIDGE=y
 # CONFIG_ARA_GB_LOOPBACK is not set
 # CONFIG_ARA_BRIDGE_BRINGUP is not set
 # CONFIG_SERVICE_MANAGER is not set
+CONFIG_ARA_DEV_INFO=y
+# CONFIG_ARA_TIME is not set
 CONFIG_GREYBUS_UTILS=y
 # CONFIG_GREYBUS_DEBUG is not set
 CONFIG_MANIFEST_ALL=y
