add out-of-tree manifest support
Now that NuttX support OOT manifest, lets add our custom manifest.

Signed-off-by: Fabien Parent <fparent@baylibre.com>

--- a/configs/skeleton_defconfig
+++ b/configs/skeleton_defconfig
@@ -160,7 +160,7 @@ CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_ARCH_CHIP_TSB_PLL is not set
 # CONFIG_ARCH_CHIP_DEVICE_I2S is not set
 # CONFIG_ARCH_CHIP_DEVICE_SPI is not set
-# CONFIG_ARCH_CHIP_DEVICE_HID is not set
+# CONFIG_ARCH_CHIP_DEVICE_SDIO is not set
 
 #
 # Architecture Options
@@ -232,8 +232,11 @@ CONFIG_NSH_MMCSDMINOR=0
 #
 # Board-Specific Options
 #
+# CONFIG_ARA_BRIDGE_HAVE_HID_TOUCH is not set
+# CONFIG_ARA_BRIDGE_HAVE_LIGHTS is not set
 # CONFIG_ARA_BRIDGE_HAVE_CAMERA is not set
 # CONFIG_BOARD_HAVE_DISPLAY is not set
+# CONFIG_ARA_BRIDGE_HAVE_BATTERY is not set
 # CONFIG_ARA_BRIDGE_BOARD_ARA_DEVBOARD is not set
 CONFIG_ARA_BRIDGE_BOARD_OOT=y
 
@@ -287,6 +290,11 @@ CONFIG_NPTHREAD_KEYS=4
 #
 # CONFIG_SCHED_CPULOAD is not set
 # CONFIG_SCHED_INSTRUMENTATION is not set
+
+#
+# Performance Tracking
+#
+# CONFIG_USEC_MEASURE_PERF is not set
 
 #
 # Files and I/O
@@ -468,7 +476,9 @@ CONFIG_GREYBUS_PWM_PHY=y
 CONFIG_GREYBUS_I2S_PHY=y
 CONFIG_GREYBUS_UART_PHY=y
 # CONFIG_GREYBUS_HID is not set
+# CONFIG_GREYBUS_SDIO_PHY is not set
 # CONFIG_GREYBUS_FEATURE_HAVE_TIMESTAMPS is not set
+# CONFIG_GREYBUS_LIGHTS is not set
 
 #
 # Networking Support
@@ -604,8 +614,9 @@ CONFIG_ARA_DEV_INFO=y
 # CONFIG_ARA_TIME is not set
 CONFIG_GREYBUS_UTILS=y
 # CONFIG_GREYBUS_DEBUG is not set
-CONFIG_MANIFEST_ALL=y
+# CONFIG_MANIFEST_ALL is not set
 # CONFIG_CUSTOM_MANIFEST is not set
+CONFIG_OOT_MANIFEST=y
 CONFIG_SVC_MSG=y
 
 #
