--- a/module-skeleton/config
+++ b/module-skeleton/config
@@ -473,12 +473,11 @@ CONFIG_GREYBUS_LOOPBACK=y
 CONFIG_GREYBUS_VIBRATOR=y
 CONFIG_GREYBUS_USB_HOST_PHY=y
 CONFIG_GREYBUS_PWM_PHY=y
-CONFIG_GREYBUS_I2S_PHY=y
 CONFIG_GREYBUS_UART_PHY=y
-# CONFIG_GREYBUS_HID is not set
-# CONFIG_GREYBUS_SDIO_PHY is not set
+CONFIG_GREYBUS_HID=y
+CONFIG_GREYBUS_SDIO_PHY=y
 # CONFIG_GREYBUS_FEATURE_HAVE_TIMESTAMPS is not set
-# CONFIG_GREYBUS_LIGHTS is not set
+CONFIG_GREYBUS_LIGHTS=y
 
 #
 # Networking Support
@@ -580,7 +579,7 @@ CONFIG_SCHED_WORKSTACKSIZE=2048
 # CONFIG_SCHED_LPWORK is not set
 # CONFIG_LIB_KBDCODEC is not set
 # CONFIG_LIB_SLCDCODEC is not set
-CONFIG_LIB_RING_BUF=y
+# CONFIG_LIB_RING_BUF is not set
 
 #
 # Basic CXX Support
@@ -605,7 +604,7 @@ CONFIG_BUILTIN_PROXY_STACKSIZE=1024
 # CONFIG_APBRIDGEA is not set
 CONFIG_GPBRIDGE=y
 # CONFIG_ARA_BRIDGE_PWM is not set
-# CONFIG_ARA_GPIO is not set
+CONFIG_ARA_GPIO=y
 # CONFIG_ARA_BRIDGE_PINSHARE is not set
 # CONFIG_ARA_GB_LOOPBACK is not set
 # CONFIG_ARA_BRIDGE_BRINGUP is not set
