defconfig: update default configs
Synchronise the config files with NuttX default.

Testing Done: compiled
Bug Number: trivial
Review URL: https://reviews.leaflabs.com/r/2134/
Reviewed by: mbolivar

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/module-skeleton/config
+++ b/module-skeleton/config
@@ -161,6 +161,8 @@ CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_ARCH_CHIP_DEVICE_I2S is not set
 # CONFIG_ARCH_CHIP_DEVICE_SPI is not set
 # CONFIG_ARCH_CHIP_DEVICE_SDIO is not set
+CONFIG_UNIPRO_ZERO_COPY=y
+CONFIG_TSB_UNIPRO_MAX_INFLIGHT_BUFCOUNT=0
 
 #
 # Architecture Options
@@ -524,6 +526,9 @@ CONFIG_DISABLE_PSEUDOFS_OPERATIONS=y
 CONFIG_MM_REGIONS=1
 # CONFIG_ARCH_HAVE_HEAP2 is not set
 # CONFIG_GRAN is not set
+CONFIG_MM_BUFRAM_ALLOCATOR=y
+CONFIG_MM_BUFRAM_CANARY=y
+# CONFIG_MM_BUFRAM_DEBUG is not set
 
 #
 # Audio Support
