Add bootrom as a submodule of FDK
Until ES3, the FDK will be used to generate S1 bootloader images with bootrom.
For this, we need bootrom as a dependency of FDK.

Testing Done: compiled
Bug Number: SW-1852
Review URL: https://reviews.leaflabs.com/r/2139/
Reviewed by: mbolivar, gregkh

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bootrom-tools"]
 	path = bootrom-tools
 	url = https://github.com/projectara/bootrom-tools.git
+[submodule "bootrom"]
+	path = bootrom
+	url = https://github.com/projectara/bootrom.git
