config: Add configuration for I2C and MM setting
1. Added tsb I2C fast speed configuration.
2. Fixed I2C has timeout issue when it is continually operation, the below
   configuration need to set in config.
   CONFIG_UNIPRO_ZERO_COPY=y
   CONFIG_MM_BUFRAM_CANARY=y

Testing Done: Run on DB3 with e-ink display module.
Bug Number: trivial
Review URL: https://reviews.leaflabs.com/r/2201/
Reviewed by: Jasonh, gregkh

Signed-off-by: Philip Yang <yang_philip@projectara.com>

--- a/module-ara-e-ink-display/config
+++ b/module-ara-e-ink-display/config
@@ -155,12 +155,15 @@ CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_TSB_PINSHARE_ETM is not set
 # CONFIG_ARCH_CHIP_TSB_I2S is not set
+CONFIG_TSB_I2C_SPEED_FAST=y
+# CONFIG_TSB_I2C_SPEED_SLOW is not set
 # CONFIG_ARCH_CHIP_USB_HCD is not set
 # CONFIG_ARCH_CHIP_DEVICE_PLL is not set
 # CONFIG_ARCH_CHIP_TSB_PLL is not set
 # CONFIG_ARCH_CHIP_DEVICE_I2S is not set
 # CONFIG_ARCH_CHIP_DEVICE_SPI is not set
 # CONFIG_ARCH_CHIP_DEVICE_SDIO is not set
+CONFIG_UNIPRO_ZERO_COPY=y
 CONFIG_TSB_UNIPRO_MAX_INFLIGHT_BUFCOUNT=0
 
 #
@@ -527,6 +530,7 @@ CONFIG_MM_REGIONS=1
 # CONFIG_ARCH_HAVE_HEAP2 is not set
 # CONFIG_GRAN is not set
 CONFIG_MM_BUFRAM_ALLOCATOR=y
+CONFIG_MM_BUFRAM_CANARY=y
 # CONFIG_MM_BUFRAM_DEBUG is not set
 
 #
