build: move submodules to specific subdirectories
Instead of having the external software dependencies required by the FDK
directly at the root, move them to the new "firmware/" and "tools/"
subdirectories.

Also add the possibility to override each of these tools when compiling, eg:
$ make NUTTX_ROOT=/path/to/custom/nuttx
which helps co-developing the FDK and external tools, while still enforcing that
the module developers will stay with a specific release of the external tools.

Testing Done: compiled
Bug Number: trivial
Review URL: https://reviews.leaflabs.com/r/2187/
Reviewed by: esennesh, morgan girling

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "nuttx"]
-	path = nuttx
+	path = firmware/nuttx
 	url = https://github.com/projectara/nuttx.git
 [submodule "manifesto"]
-	path = manifesto
+	path = tools/manifesto
 	url = https://github.com/projectara/manifesto.git
 [submodule "bootrom-tools"]
-	path = bootrom-tools
+	path = tools/bootrom-tools
 	url = https://github.com/projectara/bootrom-tools.git
 [submodule "bootrom"]
-	path = bootrom
+	path = firmware/bootrom
 	url = https://github.com/projectara/bootrom.git
