--- a/module-examples/tutorial-gpio/config
+++ b/module-examples/tutorial-gpio/config
@@ -145,6 +145,7 @@ CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 # CONFIG_ARCH_CHIP_APBRIDGE is not set
 CONFIG_ARCH_CHIP_GPBRIDGE=y
 CONFIG_TSB_CHIP_REV_ES2=y
+# CONFIG_TSB_CHIP_REV_ES3 is not set
 CONFIG_TSB_CHIP_REV="es2"
 # CONFIG_ARCH_CHIP_DEVICE_GDMAC is not set
 CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
@@ -153,6 +154,8 @@ CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_TSB_PINSHARE_ETM is not set
 # CONFIG_ARCH_CHIP_TSB_I2S is not set
+CONFIG_TSB_I2C_SPEED_FAST=y
+# CONFIG_TSB_I2C_SPEED_SLOW is not set
 # CONFIG_ARCH_CHIP_USB_HCD is not set
 # CONFIG_ARCH_CHIP_DEVICE_PLL is not set
 # CONFIG_ARCH_CHIP_TSB_PLL is not set
@@ -236,7 +239,7 @@ CONFIG_NSH_MMCSDMINOR=0
 # CONFIG_ARA_BRIDGE_HAVE_LIGHTS is not set
 # CONFIG_ARA_BRIDGE_HAVE_CAMERA is not set
 # CONFIG_BOARD_HAVE_DISPLAY is not set
-# CONFIG_ARA_BRIDGE_HAVE_BATTERY is not set
+# CONFIG_ARA_BRIDGE_HAVE_POWER_SUPPLY is not set
 # CONFIG_ARA_BRIDGE_BOARD_ARA_DEVBOARD is not set
 CONFIG_ARA_BRIDGE_BOARD_OOT=y
 
@@ -253,6 +256,8 @@ CONFIG_DISABLE_ENVIRON=y
 #
 # Clocks and Timers
 #
+CONFIG_ARCH_HAVE_TICKLESS=y
+# CONFIG_SCHED_TICKLESS is not set
 CONFIG_USEC_PER_TICK=10000
 # CONFIG_SYSTEM_TIME64 is not set
 CONFIG_CLOCK_MONOTONIC=y
@@ -463,7 +468,7 @@ CONFIG_GREYBUS_CONTROL_PROTOCOL=y
 CONFIG_GREYBUS_GPIO_PHY=y
 # CONFIG_GREYBUS_I2C_PHY is not set
 # CONFIG_GREYBUS_SPI_PHY is not set
-# CONFIG_GREYBUS_BATTERY is not set
+# CONFIG_GREYBUS_POWER_SUPPLY is not set
 # CONFIG_GREYBUS_LOOPBACK is not set
 # CONFIG_GREYBUS_VIBRATOR is not set
 # CONFIG_GREYBUS_USB_HOST_PHY is not set
@@ -603,7 +608,6 @@ CONFIG_BUILTIN_PROXY_STACKSIZE=1024
 CONFIG_GPBRIDGE=y
 # CONFIG_ARA_BRIDGE_PWM is not set
 CONFIG_ARA_GPIO=y
-# CONFIG_ARA_BRIDGE_PINSHARE is not set
 # CONFIG_ARA_BRIDGE_BRINGUP is not set
 # CONFIG_SERVICE_MANAGER is not set
 # CONFIG_ARA_TIME is not set
@@ -666,6 +670,7 @@ CONFIG_EXAMPLES_NSH=y
 # CONFIG_EXAMPLES_USBSERIAL is not set
 # CONFIG_EXAMPLES_USBTERM is not set
 # CONFIG_EXAMPLES_WATCHDOG is not set
+CONFIG_EXAMPLES_VERSION=y
 
 #
 # Graphics Support
