--- a/module-examples/e-ink-display/config
+++ b/module-examples/e-ink-display/config
@@ -237,6 +237,7 @@ CONFIG_NSH_MMCSDMINOR=0
 # Board-Specific Options
 #
 # CONFIG_ARA_BRIDGE_HAVE_HID_TOUCH is not set
+CONFIG_ARA_BRIDGE_HAVE_HID_DEVICE=y
 # CONFIG_ARA_BRIDGE_HAVE_LIGHTS is not set
 # CONFIG_ARA_BRIDGE_HAVE_CAMERA is not set
 # CONFIG_BOARD_HAVE_DISPLAY is not set
