demo: Have submodules track the 'demo' branch instead of using commit IDs
Track the submodule repo's demo branch instead of just a commit ID
in each repo.  This lets the demo branch of the FDK track the updates
to the various submodules/sub-repos.

Signed-off-by: Mark Greer <mgreer@animalcreek.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "nuttx"]
 	path = firmware/nuttx
 	url = https://github.com/projectara/nuttx.git
+	branch = demo
 [submodule "manifesto"]
 	path = tools/manifesto
 	url = https://github.com/projectara/manifesto.git
+	branch = demo
 [submodule "bootrom-tools"]
 	path = tools/bootrom-tools
 	url = https://github.com/projectara/bootrom-tools.git
+	branch = demo
 [submodule "bootrom"]
 	path = firmware/bootrom
 	url = https://github.com/projectara/bootrom.git
+	branch = demo
