white-audio: update config file
Update config file to use the reworked I2C toshiba driver, and the new I2C
test application.

Testing Done: compiled
Bug Number: SW-2145
Review URL: https://reviews.leaflabs.com/r/2734/
Reviewed by: fabien parent, mark greer

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/module-examples/white-audio/config
+++ b/module-examples/white-audio/config
@@ -65,7 +65,6 @@ CONFIG_ARCH_HAVE_STACKCHECK=y
 # Driver Debug Options
 #
 # CONFIG_DEBUG_ANALOG is not set
-# CONFIG_DEBUG_I2C is not set
 CONFIG_DEBUG_SYMBOLS=y
 CONFIG_ARCH_HAVE_CUSTOMOPT=y
 # CONFIG_DEBUG_NOOPT is not set
@@ -116,6 +115,7 @@ CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 # CONFIG_ARCH_CHIP_PINSHARE4_NONE is not set
 # CONFIG_TSB_PINSHARE_ETM is not set
 CONFIG_ARCH_CHIP_TSB_I2S=y
+CONFIG_ARCH_CHIP_DEVICE_I2C=y
 CONFIG_TSB_I2C_SPEED_FAST=y
 # CONFIG_TSB_I2C_SPEED_SLOW is not set
 # CONFIG_ARCH_CHIP_USB_HCD is not set
@@ -323,12 +323,6 @@ CONFIG_DISABLE_POLL=y
 # CONFIG_ARCH_HAVE_I2CRESET is not set
 CONFIG_DEVICE_CORE=y
 # CONFIG_GPIO is not set
-CONFIG_I2C=y
-# CONFIG_I2C_SLAVE is not set
-CONFIG_I2C_TRANSFER=y
-# CONFIG_I2C_WRITEREAD is not set
-# CONFIG_I2C_POLLED is not set
-# CONFIG_I2C_TRACE is not set
 # CONFIG_SPI is not set
 # CONFIG_I2S is not set
 # CONFIG_RTC is not set
@@ -548,6 +542,7 @@ CONFIG_ARA_UNIPRO_MAIN=y
 # CONFIG_APBRIDGEA is not set
 CONFIG_GPBRIDGE=y
 # CONFIG_ARA_BRIDGE_PWM is not set
+CONFIG_ARA_I2C=y
 CONFIG_ARA_I2S_TEST=y
 # CONFIG_ARA_BRIDGE_BRINGUP is not set
 CONFIG_SERVICE_MANAGER=y
@@ -653,13 +648,6 @@ CONFIG_NSH_CONSOLE=y
 #
 # I2C tool
 #
-CONFIG_SYSTEM_I2CTOOL=y
-CONFIG_I2CTOOL_MINBUS=0
-CONFIG_I2CTOOL_MAXBUS=3
-CONFIG_I2CTOOL_MINADDR=0x03
-CONFIG_I2CTOOL_MAXADDR=0x77
-CONFIG_I2CTOOL_MAXREGADDR=0xff
-CONFIG_I2CTOOL_DEFFREQ=400000
 
 #
 # readline()
