white-camera: adapt the driver to the new i2c interface
The white-camera module uses an i2c module-specific chip. The driver is updated
to the new i2c interface introduced in NuttX. The config file is also updated to
match the new options.

Testing Done: compiled
Bug Number: SW-2145
Review URL:
Reviewed by:

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/module-examples/white-camera/config
+++ b/module-examples/white-camera/config
@@ -49,10 +49,8 @@ CONFIG_ARCH_HAVE_STACKCHECK=y
 #
 # Subsystem Debug Options
 #
-# CONFIG_DEBUG_AUDIO is not set
 # CONFIG_DEBUG_BINFMT is not set
 # CONFIG_DEBUG_FS is not set
-# CONFIG_DEBUG_GRAPHICS is not set
 # CONFIG_DEBUG_LIB is not set
 # CONFIG_DEBUG_MM is not set
 # CONFIG_DEBUG_SCHED is not set
@@ -68,7 +66,6 @@ CONFIG_ARCH_HAVE_STACKCHECK=y
 #
 # CONFIG_DEBUG_ANALOG is not set
 # CONFIG_DEBUG_GPIO is not set
-# CONFIG_DEBUG_I2C is not set
 CONFIG_DEBUG_SYMBOLS=y
 CONFIG_ARCH_HAVE_CUSTOMOPT=y
 # CONFIG_DEBUG_NOOPT is not set
@@ -79,49 +76,16 @@ CONFIG_DEBUG_FULLOPT=y
 # System Type
 #
 CONFIG_ARCH_ARM=y
-# CONFIG_ARCH_AVR is not set
-# CONFIG_ARCH_HC is not set
-# CONFIG_ARCH_MIPS is not set
-# CONFIG_ARCH_RGMP is not set
-# CONFIG_ARCH_SH is not set
-# CONFIG_ARCH_SIM is not set
-# CONFIG_ARCH_X86 is not set
-# CONFIG_ARCH_Z16 is not set
-# CONFIG_ARCH_Z80 is not set
 CONFIG_ARCH="arm"
 
 #
 # ARM Options
 #
-# CONFIG_ARCH_CHIP_A1X is not set
-# CONFIG_ARCH_CHIP_C5471 is not set
-# CONFIG_ARCH_CHIP_CALYPSO is not set
-# CONFIG_ARCH_CHIP_DM320 is not set
-# CONFIG_ARCH_CHIP_IMX is not set
-# CONFIG_ARCH_CHIP_KINETIS is not set
-# CONFIG_ARCH_CHIP_KL is not set
-# CONFIG_ARCH_CHIP_LM is not set
-# CONFIG_ARCH_CHIP_TIVA is not set
-# CONFIG_ARCH_CHIP_LPC17XX is not set
-# CONFIG_ARCH_CHIP_LPC214X is not set
-# CONFIG_ARCH_CHIP_LPC2378 is not set
-# CONFIG_ARCH_CHIP_LPC31XX is not set
-# CONFIG_ARCH_CHIP_LPC43XX is not set
-# CONFIG_ARCH_CHIP_NUC1XX is not set
-# CONFIG_ARCH_CHIP_SAMA5 is not set
-# CONFIG_ARCH_CHIP_SAMD is not set
-# CONFIG_ARCH_CHIP_SAM34 is not set
 # CONFIG_ARCH_CHIP_STM32 is not set
-# CONFIG_ARCH_CHIP_STR71X is not set
 CONFIG_ARCH_CHIP_TSB=y
 # CONFIG_ARCH_ARM7TDMI is not set
-# CONFIG_ARCH_ARM926EJS is not set
-# CONFIG_ARCH_ARM920T is not set
-# CONFIG_ARCH_CORTEXM0 is not set
 CONFIG_ARCH_CORTEXM3=y
 # CONFIG_ARCH_CORTEXM4 is not set
-# CONFIG_ARCH_CORTEXA5 is not set
-# CONFIG_ARCH_CORTEXA8 is not set
 CONFIG_ARCH_FAMILY="armv7-m"
 CONFIG_ARCH_CHIP="tsb"
 # CONFIG_ARMV7M_USEBASEPRI is not set
@@ -131,6 +95,7 @@ CONFIG_ARMV7M_CMNVECTOR=y
 # CONFIG_DEBUG_HARDFAULT is not set
 # CONFIG_ARM_SEMIHOSTING is not set
 CONFIG_ARCH_HAVE_HIRES_TIMER=y
+# CONFIG_ARM_ITM is not set
 
 #
 # ARMV7M Configuration Options
@@ -143,22 +108,27 @@ CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 #
 # Toshiba Bridge Configuration Options
 #
-CONFIG_ARCH_CHIP_APBRIDGE=y
-# CONFIG_ARCH_CHIP_GPBRIDGE is not set
-CONFIG_TSB_CHIP_REV_ES2=y
-# CONFIG_TSB_CHIP_REV_ES3 is not set
-CONFIG_TSB_CHIP_REV="es2"
+CONFIG_ARCH_CHIP_TSB_BRIDGE=y
 # CONFIG_ARCH_CHIP_DEVICE_GDMAC is not set
+CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
+# CONFIG_ARCH_CHIP_DEVICE_PWM is not set
+# CONFIG_ARCH_CHIP_DEVICE_UART is not set
 CONFIG_ARCH_CHIP_PINSHARE4_NONE=y
 # CONFIG_TSB_PINSHARE_ETM is not set
+# CONFIG_ARCH_CHIP_TSB_I2S is not set
+CONFIG_ARCH_CHIP_DEVICE_I2C=y
 CONFIG_TSB_I2C_SPEED_FAST=y
 # CONFIG_TSB_I2C_SPEED_SLOW is not set
 CONFIG_ARCH_CHIP_USB_COMMON=y
+# CONFIG_ARCH_CHIP_USB_HCD is not set
 CONFIG_ARCH_CHIP_USB_PCD=y
 # CONFIG_DWC_QUIET is not set
 # CONFIG_ARA_USB_DEBUG is not set
 # CONFIG_ARCH_CHIP_DEVICE_PLL is not set
+# CONFIG_ARCH_CHIP_TSB_PLL is not set
 # CONFIG_ARCH_CHIP_DEVICE_I2S is not set
+# CONFIG_ARCH_CHIP_DEVICE_SPI is not set
+# CONFIG_ARCH_CHIP_DEVICE_SDIO is not set
 CONFIG_ARCH_CHIP_DEVICE_CSI=y
 CONFIG_UNIPRO_ZERO_COPY=y
 CONFIG_TSB_UNIPRO_MAX_INFLIGHT_BUFCOUNT=0
@@ -234,12 +204,9 @@ CONFIG_NSH_MMCSDMINOR=0
 # Board-Specific Options
 #
 CONFIG_ARA_BRIDGE_HAVE_USB3813=y
-# CONFIG_ARA_BRIDGE_HAVE_HID_TOUCH is not set
-CONFIG_ARA_BRIDGE_HAVE_CAMERA=y
-# CONFIG_BOARD_HAVE_DISPLAY is not set
+# CONFIG_ARA_BRIDGE_HAVE_HID_DEVICE is not set
+# CONFIG_ARA_BRIDGE_HAVE_LIGHTS is not set
 # CONFIG_ARA_BRIDGE_HAVE_POWER_SUPPLY is not set
-# CONFIG_APB_AP is not set
-CONFIG_APB_CAMERA=y
 # CONFIG_ARA_BRIDGE_BOARD_ARA_DEVBOARD is not set
 CONFIG_ARA_BRIDGE_BOARD_OOT=y
 
@@ -362,12 +329,7 @@ CONFIG_DISABLE_POLL=y
 CONFIG_DEVICE_CORE=y
 CONFIG_GPIO=y
 # CONFIG_GPIO_TCA64XX is not set
-CONFIG_I2C=y
-# CONFIG_I2C_SLAVE is not set
-CONFIG_I2C_TRANSFER=y
-# CONFIG_I2C_WRITEREAD is not set
-# CONFIG_I2C_POLLED is not set
-# CONFIG_I2C_TRACE is not set
+# CONFIG_GPIO_DEBOUNCE is not set
 # CONFIG_SPI is not set
 # CONFIG_I2S is not set
 # CONFIG_RTC is not set
@@ -377,7 +339,6 @@ CONFIG_I2C_TRANSFER=y
 # CONFIG_AUDIO_DEVICES is not set
 # CONFIG_BCH is not set
 # CONFIG_INPUT is not set
-# CONFIG_LCD is not set
 # CONFIG_MMCSD is not set
 # CONFIG_MTD is not set
 # CONFIG_PIPES is not set
@@ -438,6 +399,7 @@ CONFIG_MCU_SERIAL=y
 CONFIG_STANDARD_SERIAL=y
 # CONFIG_SERIAL_TIOCSERGSTRUCT is not set
 # CONFIG_ARM_SEMIHOSTING_CONSOLE is not set
+# CONFIG_ARM_ITM_CONSOLE is not set
 CONFIG_UART_SERIAL_CONSOLE=y
 # CONFIG_NO_SERIAL_CONSOLE is not set
 
@@ -455,8 +417,6 @@ CONFIG_UART_2STOP=0
 # CONFIG_SERIAL_IFLOWCONTROL is not set
 # CONFIG_SERIAL_OFLOWCONTROL is not set
 # CONFIG_USBDEV is not set
-# CONFIG_USBHOST is not set
-# CONFIG_WIRELESS is not set
 
 #
 # System Logging Device Options
@@ -483,18 +443,8 @@ CONFIG_GREYBUS_CONTROL_PROTOCOL=y
 # CONFIG_GREYBUS_FEATURE_HAVE_TIMESTAMPS is not set
 # CONFIG_GREYBUS_LIGHTS is not set
 CONFIG_GREYBUS_CAMERA=y
-
-#
-# Networking Support
-#
-# CONFIG_ARCH_HAVE_NET is not set
-# CONFIG_ARCH_HAVE_PHY is not set
-# CONFIG_NET is not set
-
-#
-# Crypto API
-#
-# CONFIG_CRYPTO is not set
+# CONFIG_GREYBUS_AUDIO is not set
+# CONFIG_DRIVERS_ARA is not set
 
 #
 # File Systems
@@ -518,11 +468,6 @@ CONFIG_DISABLE_PSEUDOFS_OPERATIONS=y
 # CONFIG_SYSLOG is not set
 
 #
-# Graphics Support
-#
-# CONFIG_NX is not set
-
-#
 # Memory Management
 #
 # CONFIG_MM_SMALL is not set
@@ -532,11 +477,6 @@ CONFIG_MM_REGIONS=1
 CONFIG_MM_BUFRAM_ALLOCATOR=y
 CONFIG_MM_BUFRAM_CANARY=y
 # CONFIG_MM_BUFRAM_DEBUG is not set
-
-#
-# Audio Support
-#
-# CONFIG_AUDIO is not set
 
 #
 # Binary Formats
@@ -586,14 +526,7 @@ CONFIG_SCHED_WORKPERIOD=50000
 CONFIG_SCHED_WORKSTACKSIZE=2048
 # CONFIG_SCHED_LPWORK is not set
 # CONFIG_LIB_KBDCODEC is not set
-# CONFIG_LIB_SLCDCODEC is not set
 # CONFIG_LIB_RING_BUF is not set
-
-#
-# Basic CXX Support
-#
-# CONFIG_C99_BOOL8 is not set
-# CONFIG_HAVE_CXX is not set
 
 #
 # Application Configuration
@@ -612,11 +545,13 @@ CONFIG_ARA_UNIPRO_MAIN=y
 # CONFIG_APBRIDGEA is not set
 CONFIG_GPBRIDGE=y
 # CONFIG_ARA_BRIDGE_PWM is not set
-# CONFIG_ARA_GPIO is not set
+CONFIG_ARA_GPIO=y
+CONFIG_ARA_I2C=y
 # CONFIG_ARA_BRIDGE_BRINGUP is not set
 CONFIG_SERVICE_MANAGER=y
 CONFIG_ARA_DEV_INFO=y
 # CONFIG_ARA_TIME is not set
+CONFIG_ARA_VERSION=y
 CONFIG_GREYBUS_UTILS=y
 # CONFIG_GREYBUS_DEBUG is not set
 # CONFIG_MANIFEST_ALL is not set
@@ -626,68 +561,8 @@ CONFIG_OOT_MANIFEST=y
 #
 # Examples
 #
-# CONFIG_EXAMPLES_BUTTONS is not set
-# CONFIG_EXAMPLES_CAN is not set
-# CONFIG_EXAMPLES_CONFIGDATA is not set
-# CONFIG_EXAMPLES_CPUHOG is not set
-# CONFIG_EXAMPLES_DHCPD is not set
-# CONFIG_EXAMPLES_ELF is not set
-# CONFIG_EXAMPLES_FTPC is not set
-# CONFIG_EXAMPLES_FTPD is not set
 # CONFIG_EXAMPLES_HELLO is not set
-# CONFIG_EXAMPLES_HELLOXX is not set
-# CONFIG_EXAMPLES_JSON is not set
-# CONFIG_EXAMPLES_HIDKBD is not set
-# CONFIG_EXAMPLES_KEYPADTEST is not set
-# CONFIG_EXAMPLES_IGMP is not set
-# CONFIG_EXAMPLES_MM is not set
-# CONFIG_EXAMPLES_MOUNT is not set
-# CONFIG_EXAMPLES_NRF24L01TERM is not set
 CONFIG_EXAMPLES_NSH=y
-# CONFIG_EXAMPLES_NULL is not set
-# CONFIG_EXAMPLES_NX is not set
-# CONFIG_EXAMPLES_NXTERM is not set
-# CONFIG_EXAMPLES_NXFFS is not set
-# CONFIG_EXAMPLES_NXFLAT is not set
-# CONFIG_EXAMPLES_NXHELLO is not set
-# CONFIG_EXAMPLES_NXIMAGE is not set
-# CONFIG_EXAMPLES_NXLINES is not set
-# CONFIG_EXAMPLES_NXTEXT is not set
-# CONFIG_EXAMPLES_OSTEST is not set
-# CONFIG_EXAMPLES_PIPE is not set
-# CONFIG_EXAMPLES_POSIXSPAWN is not set
-# CONFIG_EXAMPLES_QENCODER is not set
-# CONFIG_EXAMPLES_RGMP is not set
-# CONFIG_EXAMPLES_ROMFS is not set
-# CONFIG_EXAMPLES_SENDMAIL is not set
-# CONFIG_EXAMPLES_SERIALBLASTER is not set
-# CONFIG_EXAMPLES_SERIALRX is not set
-# CONFIG_EXAMPLES_SERLOOP is not set
-# CONFIG_EXAMPLES_SLCD is not set
-# CONFIG_EXAMPLES_SMART_TEST is not set
-# CONFIG_EXAMPLES_SMART is not set
-# CONFIG_EXAMPLES_TCPECHO is not set
-# CONFIG_EXAMPLES_TELNETD is not set
-# CONFIG_EXAMPLES_THTTPD is not set
-# CONFIG_EXAMPLES_TIFF is not set
-# CONFIG_EXAMPLES_TOUCHSCREEN is not set
-# CONFIG_EXAMPLES_UDP is not set
-# CONFIG_EXAMPLES_WEBSERVER is not set
-# CONFIG_EXAMPLES_USBSERIAL is not set
-# CONFIG_EXAMPLES_USBTERM is not set
-# CONFIG_EXAMPLES_WATCHDOG is not set
-CONFIG_EXAMPLES_VERSION=y
-
-#
-# Graphics Support
-#
-# CONFIG_TIFF is not set
-
-#
-# Interpreters
-#
-# CONFIG_INTERPRETERS_FICL is not set
-# CONFIG_INTERPRETERS_PCODE is not set
 
 #
 # NSH Library
@@ -770,133 +645,15 @@ CONFIG_NSH_CONSOLE=y
 # CONFIG_NSH_ARCHINIT is not set
 
 #
-# NxWidgets/NxWM
-#
-
-#
-# Platform-specific Support
-#
-# CONFIG_PLATFORM_CONFIGDATA is not set
-
-#
 # System Libraries and NSH Add-Ons
 #
 
 #
-# Custom Free Memory Command
-#
-# CONFIG_SYSTEM_FREE is not set
-
-#
-# EMACS-like Command Line Editor
-#
-# CONFIG_SYSTEM_CLE is not set
-
-#
-# FLASH Program Installation
-#
-# CONFIG_SYSTEM_INSTALL is not set
-
-#
-# FLASH Erase-all Command
-#
-
-#
-# Intel HEX to binary conversion
-#
-# CONFIG_SYSTEM_HEX2BIN is not set
-
-#
 # I2C tool
 #
-CONFIG_SYSTEM_I2CTOOL=y
-CONFIG_I2CTOOL_MINBUS=0
-CONFIG_I2CTOOL_MAXBUS=3
-CONFIG_I2CTOOL_MINADDR=0x03
-CONFIG_I2CTOOL_MAXADDR=0x77
-CONFIG_I2CTOOL_MAXREGADDR=0xff
-CONFIG_I2CTOOL_DEFFREQ=400000
-
-#
-# INI File Parser
-#
-# CONFIG_SYSTEM_INIFILE is not set
-
-#
-# NxPlayer media player library / command Line
-#
-# CONFIG_SYSTEM_NXPLAYER is not set
-
-#
-# RAM test
-#
-# CONFIG_SYSTEM_RAMTEST is not set
 
 #
 # readline()
 #
 CONFIG_SYSTEM_READLINE=y
 CONFIG_READLINE_ECHO=y
-
-#
-# P-Code Support
-#
-
-#
-# PHY Tool
-#
-
-#
-# Power Off
-#
-# CONFIG_SYSTEM_POWEROFF is not set
-
-#
-# RAMTRON
-#
-# CONFIG_SYSTEM_RAMTRON is not set
-
-#
-# SD Card
-#
-# CONFIG_SYSTEM_SDCARD is not set
-
-#
-# Sudoku
-#
-# CONFIG_SYSTEM_SUDOKU is not set
-
-#
-# Sysinfo
-#
-# CONFIG_SYSTEM_SYSINFO is not set
-
-#
-# VI Work-Alike Editor
-#
-# CONFIG_SYSTEM_VI is not set
-
-#
-# Stack Monitor
-#
-
-#
-# USB CDC/ACM Device Commands
-#
-
-#
-# USB Composite Device Commands
-#
-
-#
-# USB Mass Storage Device Commands
-#
-
-#
-# USB Monitor
-#
-
-#
-# Zmodem Commands
-#
-# CONFIG_SYSTEM_ZMODEM is not set
