--- a/module-examples/skeleton/config
+++ b/module-examples/skeleton/config
@@ -110,7 +110,9 @@ CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 # Toshiba Bridge Configuration Options
 #
 CONFIG_ARCH_CHIP_TSB_BRIDGE=y
+# CONFIG_ARCH_UNIPRO_DEBUG is not set
 # CONFIG_ARCH_CHIP_DEVICE_GDMAC is not set
+CONFIG_ARCH_UNIPRO_MAX_CPORT_COUNT=0
 CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 # CONFIG_ARCH_CHIP_DEVICE_PWM is not set
 # CONFIG_ARCH_CHIP_DEVICE_UART is not set
@@ -190,7 +192,6 @@ CONFIG_RAM_SIZE=196608
 #
 CONFIG_ARCH_BOARD_ARA_BRIDGE=y
 # CONFIG_ARCH_BOARD_CUSTOM is not set
-# CONFIG_ARCH_BOARD_ARA_SVC is not set
 CONFIG_ARCH_BOARD="ara/bridge"
 
 #
@@ -546,7 +547,6 @@ CONFIG_GPBRIDGE=y
 CONFIG_ARA_GPIO=y
 CONFIG_ARA_I2C=y
 # CONFIG_ARA_GB_LOOPBACK is not set
-# CONFIG_ARA_BRIDGE_BRINGUP is not set
 # CONFIG_SERVICE_MANAGER is not set
 CONFIG_ARA_DEV_INFO=y
 # CONFIG_ARA_TIME is not set
