--- a/module-examples/white-audio/config
+++ b/module-examples/white-audio/config
@@ -108,7 +108,9 @@ CONFIG_ARMV7M_TOOLCHAIN_GNU_EABIL=y
 # Toshiba Bridge Configuration Options
 #
 CONFIG_ARCH_CHIP_TSB_BRIDGE=y
+# CONFIG_ARCH_UNIPRO_DEBUG is not set
 # CONFIG_ARCH_CHIP_DEVICE_GDMAC is not set
+CONFIG_ARCH_UNIPRO_MAX_CPORT_COUNT=0
 CONFIG_ARCH_CHIP_PINSHARE1_NONE=y
 # CONFIG_ARCH_CHIP_DEVICE_PWM is not set
 # CONFIG_ARCH_CHIP_DEVICE_UART is not set
@@ -188,7 +190,6 @@ CONFIG_RAM_SIZE=196608
 #
 CONFIG_ARCH_BOARD_ARA_BRIDGE=y
 # CONFIG_ARCH_BOARD_CUSTOM is not set
-# CONFIG_ARCH_BOARD_ARA_SVC is not set
 CONFIG_ARCH_BOARD="ara/bridge"
 
 #
@@ -544,7 +545,6 @@ CONFIG_GPBRIDGE=y
 # CONFIG_ARA_BRIDGE_PWM is not set
 CONFIG_ARA_I2C=y
 CONFIG_ARA_I2S_TEST=y
-# CONFIG_ARA_BRIDGE_BRINGUP is not set
 CONFIG_SERVICE_MANAGER=y
 CONFIG_ARA_DEV_INFO=y
 # CONFIG_ARA_TIME is not set
